@@ -2,7 +2,25 @@ version = "1.1.0"
 
 javafx {
   version = "18.0.1"
-  modules = listOf("javafx.controls", "javafx.graphics", "javafx.media")
+  modules = listOf("javafx.graphics", "javafx.media")
+}
+
+tasks {
+  task<JavaExec>("mediaSoundTest") {
+    setupJavaFx(this)
+
+    group = "Execution"
+    description = "Test to check if the Media type is working correctly"
+    mainClass.set("org.storm.sound.types.MediaSoundTest")
+  }
+
+  task<JavaExec>("soundManagerTest") {
+    setupJavaFx(this)
+
+    group = "Execution"
+    description = "Test for SoundManager"
+    mainClass.set("org.storm.sound.SoundManagerTest")
+  }
 }
 
 publishing {
@@ -14,5 +32,24 @@ publishing {
 
       from(components["java"])
     }
+  }
+}
+
+fun setupJavaFx(exec: JavaExec) {
+  exec.doFirst {
+    // Setup our class paths
+    sourceSets.main.configure {
+      exec.classpath(this.runtimeClasspath.asPath)
+    }
+    sourceSets.test.configure {
+      exec.classpath(this.runtimeClasspath.asPath)
+    }
+
+    // For some reason tasks are ignored by the JavaFx Plugin (because why not) so we have to
+    // do what the plugin does ourselves
+    exec.jvmArgs = listOf(
+            "--module-path", exec.classpath.asPath,
+            "--add-modules", "javafx.graphics,javafx.media"
+    )
   }
 }
